fixed searchbar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ button[type="submit"] {
     background-color: white;
     border: none;
     position: relative;
-    top: 0.08em;
+    top: 0.07em;
     left: -0.313em;
     transition: 0.3s;
     font-size: 1em;
